frontend: Fix styling for active button on mobile
Fix styling for active button on mobile. At the moment it is blue when tapped
and just before the slide. For good measure add the :active pseudoclass for
desktop too.

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -541,7 +541,9 @@ button.primary {
 .run button.running#run,
 .run button.running#run-mobile,
 .run button.running#run:hover,
-.run button.running#run-mobile:hover {
+.run button.running#run:active,
+.run button.running#run-mobile:hover,
+.run button.running#run-mobile:active {
   color: var(--btn-color-active);
   letter-spacing: 0.2em;
   transition: 0s;
